security: enhance authentication and OTP logic
- Replace Random with SecureRandom for OTP generation
- Enforce SPECTATOR role on registration to prevent privilege escalation
- Add Bucket4j dependency and RateLimitingFilter for brute-force protection
- Ensure explicit email verification check during login
- Fix Google OAuth2 provider linkage logic